syntax = "proto3";

service ServiceName {
    rpc CreateModel (ModelBase) returns (Model);
    rpc GetModel (ModelId) returns (Model);
}

message ModelId {
    int32 id = 1;
}

message ModelBase {
    string example = 1;
}

message Model {
    int32 id = 1;
    string example = 2;
}
